src/assets/pages/Home.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.home-page {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    min-height: 100dvh;
    font-family: "Roboto", serif;
}

.title {
    color: white;
    z-index: 5;
    
    font-size: 2.5rem;       
}

.title strong {
    color: #F83C7F; 
    font-size: 3rem;
}


.search-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 95%;
    max-width: 40rem;
    margin: 1rem;
    

    

}

.search-container input {
    width: 100%;
    padding: 1rem;
    border-radius: 1.5rem;
    border: none;
    outline: none;
    
}

.searchBtn {
    margin: 1rem;
    padding: .5rem 2rem;
    border-radius: 2rem;
    width: 8rem;

}

.searchBtn:hover {
    cursor: pointer;
    background-color: #f83c7ea1;
}

.results-container {
    color: white;
    width: 95%;
    max-width: 50rem;
}

.result-item {
    list-style: none;
    padding: 1rem;
    border-radius: 5%;
    margin: 1rem 0 3rem 0;
        /* other styles */
        background: rgba(39, 39, 39, 0.1);
        backdrop-filter: blur(30px);
         /* fallback for old browsers */
        -webkit-backdrop-filter: blur(60px);
        border: 2px solid rgba(255, 255, 255, 0.2);
}

.result-item h4 {
    margin-top: 1rem;
}

.researchers {
    margin: 1rem 0 ;
}



        

